--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <b>Hello!</b>
+    <b>Home Page</b>
     I hope you’re having as much fun reading this as I had writing it!
 </body>
 </html>
